[gd_scene load_steps=9 format=3 uid="uid://cegf5oisl3jfd"]

[ext_resource type="Script" path="res://end_game.gd" id="1_8lfph"]
[ext_resource type="Texture2D" uid="uid://qlac3ai5jwl5" path="res://Bg 1.PNG" id="2_4dvl1"]
[ext_resource type="FontFile" uid="uid://d2iu1skasybo4" path="res://press-start/prstart.ttf" id="2_8312e"]
[ext_resource type="Texture2D" uid="uid://bc3klib8esw4e" path="res://Bg 2.PNG" id="3_pcxj2"]
[ext_resource type="Texture2D" uid="uid://pesavg42c8g7" path="res://Bg 3.PNG" id="4_1d7bd"]
[ext_resource type="Texture2D" uid="uid://dula0l6i2ywg6" path="res://Bg 4.PNG" id="5_ongmw"]
[ext_resource type="AudioStream" uid="uid://c5ieamidw1cie" path="res://Sound/game over.wav" id="7_i0ekn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8kt8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4dvl1")
}, {
"duration": 1.0,
"texture": ExtResource("3_pcxj2")
}, {
"duration": 1.0,
"texture": ExtResource("4_1d7bd")
}, {
"duration": 1.0,
"texture": ExtResource("5_ongmw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="endGame" type="Node2D"]
script = ExtResource("1_8lfph")

[node name="gameOverBG" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
texture_filter = 1
position = Vector2(285, 170)
scale = Vector2(0.999998, 1.09677)
sprite_frames = SubResource("SpriteFrames_8kt8e")
autoplay = "default"
frame = 2
frame_progress = 0.840641

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 169.0
offset_top = 62.0
offset_right = 5119.0
offset_bottom = 613.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_8312e")
theme_override_font_sizes/font_size = 550
text = "GAME OVER
"

[node name="endScore2" type="Label" parent="."]
texture_filter = 1
offset_left = 198.0
offset_top = 104.0
offset_right = 2998.0
offset_bottom = 504.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_8312e")
theme_override_font_sizes/font_size = 400
text = "SCORE: "

[node name="tryAgainButton" type="Button" parent="."]
offset_left = 196.0
offset_top = 158.0
offset_right = 3836.0
offset_bottom = 998.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_8312e")
theme_override_font_sizes/font_size = 300
text = "TRY AGAIN"

[node name="exitButton" type="Button" parent="."]
offset_left = 196.0
offset_top = 238.0
offset_right = 3836.0
offset_bottom = 1078.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("2_8312e")
theme_override_font_sizes/font_size = 300
text = "EXIT
"

[node name="deadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_i0ekn")

[connection signal="pressed" from="tryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="exitButton" to="." method="_on_exit_button_pressed"]
